# BlobStorageProject

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: main_storageblobproject.yml  main_website007204.yml
static/: header.css
templates/: index.html  nav_bar.html  share_blob.html  upload.html  view_blob.html
